==> wcheng95/RA8876_DX_FT8/src/button.cpp <==
#include <si5351.h>
#include <RA8876_t3.h>
#include <Audio.h>
#include <EEPROM.h>
#include <Wire.h>
#include <TimeLib.h>
#include "button.h"
#include "display.h"
#include "gen_ft8.h"
#include "traffic_manager.h"
#include "decode_ft8.h"
#include "Process_DSP.h"
#include "options.h"
#include "ADIF.h"
#include "main.h"
#include "Maps.h"
#define Board_PIN 2
#define Relay_PIN 3
#define RxSw_PIN 4
#define TxSw_PIN 5
#define CQSOTA 18
#define CQPOTA 19
#define QRPP 20
#define StandardCQ 17
#define FreeText1 21
#define FreeText2 22
#define CQFree 4
#define USB 2
#define SCREEN_WIDTH 1024
#define SCREEN_HEIGHT 600
#define ft8_shift 6.25
#define numButtons 23
#define button_height 100
#define button_height_Low 60
#define button_width 80
#define line0 20
#define line1 539
#define line2 120
#define line3 200
#define line4 300
#define line5 400
#define numBands 7

void drawButton(uint16_t i)
{
  tft.setFontSize(2, true);
  if (sButtonData[i].Active > 0)
  {

    if (sButtonData[i].state == 1)
      tft.textColor(WHITE, RED);
    else
      tft.textColor(WHITE, BLUE);

    if (sButtonData[i].state == 1)
    {
      tft.setCursor(sButtonData[i].x + 7, sButtonData[i].y + 20);
      tft.write(sButtonData[i].text1, 4);
    }
    else
    {
      tft.setCursor(sButtonData[i].x + 7, sButtonData[i].y + 20);
      tft.write(sButtonData[i].text0, 4);
    }
  }
}

void executeButton(uint16_t index)
{
  switch (index)
  {
  case 0:
    sButtonData[0].state = 1;
    drawButton(0);
    delay(40);

    clear_xmit_messages();
    terminate_QSO();
    Auto_QSO_State = 0;
    QSO_xmit = 0;
    clear_reply_message_box();
    clear_log_stored_data();
    clear_log_messages();

    erase_CQ();
    sButtonData[0].state = 0;
    drawButton(0);

    break;

  case 1:
    if (!sButtonData[1].state)
    {
      Beacon_On = 0;
      Beacon_State = 0;
      clear_reply_message_box();
      clear_log_messages();
      clear_log_stored_data();
    }
    else
    {
      Beacon_On = 1;
      clear_reply_message_box();
      clear_log_stored_data();
      clear_log_messages();
      Beacon_State = 1;
    }

    delay(5);
    break;

  case 2:
    if (!sButtonData[2].state)
    {
      tune_Off_sequence();
      Tune_On = 0;
      Arm_Tune = 0;
      xmit_flag = 0;
      receive_sequence();
      erase_Cal_Display();
      delay(5);
    }
    else
    {
      Tune_On = 1; // Turns off display of FT8 traffic
      setup_Cal_Display();
      Arm_Tune = 0;
    }
    break;

  case 3:
    // no code required, all dependent stuff works off of button state
    break;

  case 4:
    if (!sButtonData[4].state && Free_Index != 0)
    {
      Free_Index = 0;
    }
    break;

  case 5:
    delay(10);
    if (sButtonData[5].state == 1)
      QSO_Fix = 1;
    else
      QSO_Fix = 0;

    break;

  case 6:
    if (!sButtonData[6].state)
      Auto_Sync = 0;
    else
    {
      Auto_Sync = 1;
      Be_Patient();
    }
    break;

  case 7: // Lower Gain
    if (RF_Gain >= 2)
      RF_Gain--;
    display_value(620, 559, RF_Gain);
    set_RF_Gain(RF_Gain);
    break;

  case 8: // Raise Gain
    if (RF_Gain < 32)
      RF_Gain++;
    display_value(620, 559, RF_Gain);
    set_RF_Gain(RF_Gain);
    break;

  case 9: // Lower Freq
    if (cursor_line > 0)
    {
      cursor_line--;
      cursor_freq = (uint16_t)((float)(cursor_line + ft8_min_bin) * ft8_shift);
      display_cursor_line = 2 * cursor_line;
      display_value(870, 559, cursor_freq);
    }
    break;

  case 10: // Raise Freq
    if (cursor_line <= (ft8_buffer - ft8_min_bin - 2))
    {
      cursor_line++;
      cursor_freq = (uint16_t)((float)(cursor_line + ft8_min_bin) * ft8_shift);
      display_cursor_line = 2 * cursor_line;
      display_value(870, 559, cursor_freq);
    }
    break;

  case 14: // Transmit for Calibration   17
    if (!sButtonData[14].state)
    {
      tune_Off_sequence();
      Arm_Tune = 0;
      xmit_flag = 0;
      receive_sequence();
    }
    else
    {
      transmit_sequence();
      delay(10);
      xmit_flag = 1;
      tune_On_sequence();
      Arm_Tune = 1;
    }
    break;
  }
}

void executeCalibrationButton(uint16_t index)
{
  switch (index)
  {
  case 11: // Lower Band
    if (BandIndex > Band_Minimum)
    {
      BandIndex--;
      show_wide(90, 140, sBand_Data[BandIndex].Frequency); // 790 - 700 = 90
    }
    break;

  case 12: // Raise Band
    if (BandIndex < _10M)
    {
      BandIndex++;
      show_wide(90, 140, sBand_Data[BandIndex].Frequency); // 790 - 700 = 90
    }
    break;

  case 13: // Save Band Changes
    Options_SetValue(0, BandIndex);
    Options_StoreValue(0);
    start_freq = sBand_Data[BandIndex].Frequency;
    show_wide(680, 0, (int)start_freq);

    set_Rcvr_Freq();
    delay(10);

    SelectFilterBlock();

    sButtonData[13].state = 1;
    drawButton(13);
    delay(10);
    sButtonData[13].state = 0;
    drawButton(13);
    break;

  case 15: // Lower Map_Index
    if (Map_Index > 0)
    {
      Map_Index--;
      draw_map(Map_Index);
      Options_SetValue(1, Map_Index);
      Options_StoreValue(1);
      Map_Index = Options_GetValue(1);
    }

    sButtonData[15].state = 1;
    drawButton(15);
    delay(10);
    sButtonData[15].state = 0;
    drawButton(15);
    break;

  case 16: // Raise Map_Index
    if (Map_Index < numMaps - 1)
    {
      Map_Index++;
      draw_map(Map_Index);
      Options_SetValue(1, Map_Index);
      Options_StoreValue(1);
      Map_Index = Options_GetValue(1);
    }
    
    sButtonData[16].state = 1;
    drawButton(16);
    delay(10);
    sButtonData[16].state = 0;
    drawButton(16);
    break;

  case StandardCQ:
    if (!sButtonData[StandardCQ].state)
    {
      CQ_Mode_Index = 0;
      reset_buttons(CQSOTA, CQPOTA, QRPP, " CQ ");
      sButtonData[StandardCQ].state = 1;
      drawButton(StandardCQ);
    }
    break;

  case CQSOTA:
    if (!sButtonData[CQSOTA].state)
    {
      CQ_Mode_Index = 1;
      reset_buttons(StandardCQ, CQPOTA, QRPP, "SOTA");
      sButtonData[CQSOTA].state = 1;
      drawButton(CQSOTA);
    }
    break;

  case CQPOTA:
    if (!sButtonData[CQPOTA].state)
    {
      CQ_Mode_Index = 2;
      reset_buttons(StandardCQ, CQSOTA, QRPP, "POTA");
      sButtonData[CQPOTA].state = 1;
      drawButton(CQPOTA);
    }
    break;

  case QRPP:
    if (!sButtonData[QRPP].state)
    {
      CQ_Mode_Index = 3;
      reset_buttons(StandardCQ, CQSOTA, CQPOTA, "QRP ");
      sButtonData[QRPP].state = 1;
      drawButton(QRPP);
    }
    break;

  case 21:
    Free_Index = 0;
    sButtonData[FreeText2].state = 0;
    drawButton(FreeText2);

    if (!sButtonData[FreeText1].state)
    {
      Free_Index = 1;
      sButtonData[FreeText1].state = 1;
      drawButton(FreeText1);
    }
    else
    {
      sButtonData[FreeText1].state = 0;
      drawButton(FreeText1);
    }
    break;

  case FreeText2:
    Free_Index = 0;
    sButtonData[FreeText1].state = 0;
    drawButton(FreeText1);

    if (!sButtonData[FreeText2].state)
    {
      Free_Index = 2;
      sButtonData[FreeText2].state = 1;
      drawButton(FreeText2);
    }
    else
    {
      sButtonData[FreeText2].state = 0;
      drawButton(FreeText2);
    }
    break;
  }
}

void Init_BoardVersionInput(void)
{
  pinMode(Board_PIN, INPUT_PULLUP);
  delay(10);
  digitalRead(Board_PIN);
}

void RLY_Select_20to40(void)
{
  digitalWrite(Relay_PIN, HIGH);
}

void RLY_Select_10to17(void)
{
  digitalWrite(Relay_PIN, LOW);
}

void Init_BandSwitchOutput(void)
{
  pinMode(Relay_PIN, OUTPUT);
  digitalWrite(Relay_PIN, LOW);
}

void Check_Board_Version(void)
{
  Band_Minimum = _20M;

  // GPIO Pin 6 is grounded for new model
  if (digitalRead(Board_PIN) == 0)
  {
    Init_BandSwitchOutput();
    Band_Minimum = _40M;
  }
}

void receive_sequence(void)
{
  digitalWrite(TxSw_PIN, HIGH);
  delay(10);
  digitalWrite(RxSw_PIN, LOW);
  set_xmit_button(false);
}

void setup_Cal_Display(void)
{
  clear_reply_message_box();
  tft.fillRect(0, 100, 600, 439, BLACK);
  erase_CQ();

  sButtonData[11].Active = 3;
  sButtonData[12].Active = 3;
  sButtonData[13].Active = 3;
  sButtonData[14].Active = 1;
  sButtonData[15].Active = 3;
  sButtonData[16].Active = 3;
  sButtonData[17].Active = 3;
  sButtonData[18].Active = 3;
  sButtonData[19].Active = 3;
  sButtonData[20].Active = 3;
  sButtonData[21].Active = 3;
  sButtonData[22].Active = 3;

  for (int i = 11; i < 23; i++)
    drawButton(i);

  show_wide(90, 140, start_freq); // 790 - 700 = 90

  display_Free_Text();
}

void erase_Cal_Display(void)
{
  clear_reply_message_box();
  tft.fillRect(0, 100, 600, 439, BLACK); // move tune to left hand pane
  erase_CQ();
  for (int i = 11; i < 23; i++)
    sButtonData[i].Active = 0;
}
