==> wcheng95/DX-FT8-MULTIBAND-TABLET-TRANSCEIVER-Source/Src/button.c <==
#include <Display.h>
#include <stdlib.h>
#include "button.h"
#include "stm32746g_discovery_lcd.h"
#include "SDR_Audio.h"
#include "Codec_Gains.h"
#include "decode_ft8.h"
#include "main.h"
#include "stm32fxxx_hal.h"
#include "Process_DSP.h"
#include "log_file.h"
#include "gen_ft8.h"
#include "traffic_manager.h"
#include "DS3231.h"
#include "SiLabs.h"
#include "options.h"
#define FFT_Resolution 6.25 // 8000/2/1280
#define numButtons 28

void drawButton(uint16_t i)
{
	BSP_LCD_SetFont(&Font16);
	if (sButtonData[i].Active > 0)
	{
		if (sButtonData[i].state == 1)
			BSP_LCD_SetBackColor(LCD_COLOR_RED);
		else
			BSP_LCD_SetBackColor(LCD_COLOR_BLUE);

		BSP_LCD_SetTextColor(LCD_COLOR_WHITE);

		if (sButtonData[i].state == 1)
			BSP_LCD_DisplayStringAt(sButtonData[i].x, sButtonData[i].y + 15,
									(const uint8_t *)sButtonData[i].text1, LEFT_MODE);
		else
			BSP_LCD_DisplayStringAt(sButtonData[i].x, sButtonData[i].y + 15,
									(const uint8_t *)sButtonData[i].text0, LEFT_MODE);

		BSP_LCD_SetBackColor(LCD_COLOR_BLACK);
	}
}

void executeButton(uint16_t index)
{
	switch (index)
	{
	case 0:
		clear_xmit_messages();
		terminate_QSO();
		Auto_QSO_State = 0;
		QSO_xmit = 0;
		clear_reply_message_box();
		clear_log_stored_data();
		clear_log_messages();

		sButtonData[0].state = 1;
		drawButton(0);
		HAL_Delay(10);
		sButtonData[0].state = 0;
		drawButton(0);
		break;

	case 1:
		if (!sButtonData[1].state)
		{
			Beacon_On = 0;
			Beacon_State = 0;
			clear_reply_message_box();
			clear_log_messages();
			clear_log_stored_data();
		}
		else
		{
			Beacon_On = 1;
			clear_reply_message_box();
			clear_log_stored_data();
			clear_Beacon_log_messages();
			Beacon_State = 1;
		}
		break;

	case 2:
		if (!sButtonData[2].state)
		{
			tune_Off_sequence();
			Tune_On = 0;
			Arm_Tune = 0;
			xmit_flag = 0;
			receive_sequence();
			erase_Cal_Display();
		}
		else
		{
			Tune_On = 1; // Turns off display of FT8 traffic
			setup_Cal_Display();
			Arm_Tune = 0;
		}
		break;

	case 3:
		// no code required, all dependent stuff works off of button state
		break;

	case 4:
		if (sButtonData[4].state == 1)
			QSO_Fix = 1;
		else
			QSO_Fix = 0;
		break;

	case 5:
		if (!sButtonData[5].state)
			Auto_Sync = 0;
		else
			Auto_Sync = 1;
		break;

	case 6: // Lower Gain
		if (AGC_Gain >= 3)
			AGC_Gain--;
		show_short(405, 255, AGC_Gain);
		Set_PGA_Gain(AGC_Gain);
		break;

	case 7: // Raise Gain
		if (AGC_Gain < 31)
			AGC_Gain++;
		show_short(405, 255, AGC_Gain);
		Set_PGA_Gain(AGC_Gain);
		break;

	case 8: // Lower Freq
		if (cursor > 0)
		{
			cursor--;
			NCO_Frequency = (double)(cursor + ft8_min_bin) * FFT_Resolution;
		}
		show_variable(400, 25, (int)NCO_Frequency);
		break;

	case 9: // Raise Freq
		if (cursor <= (ft8_buffer - ft8_min_bin - 2))
		{ // limits highest NCO frequency to 3875 hz
			cursor++;
			NCO_Frequency = (double)(cursor + ft8_min_bin) * FFT_Resolution;
		}
		show_variable(400, 25, (int)NCO_Frequency);
		break;

	case 12: // Transmit for Calibration
		if (!sButtonData[12].state)
		{
			tune_Off_sequence();
			Arm_Tune = 0;
			xmit_flag = 0;
			receive_sequence();
		}
		else
		{
			xmit_sequence();
			HAL_Delay(10);
			xmit_flag = 1;
			tune_On_sequence();
			Arm_Tune = 1;
		}
		break;

	case 13: // Save Band Changes
		Options_SetValue(0, BandIndex);
		Options_StoreValue(0);
		start_freq = sBand_Data[BandIndex].Frequency;
		show_wide(380, 0, start_freq);

		sprintf(display_frequency, "%s", sBand_Data[BandIndex].display);

		set_Rcvr_Freq();
		HAL_Delay(10);

		SelectFilterBlock();

		sButtonData[13].state = 1;
		drawButton(13);
		HAL_Delay(10);
		sButtonData[13].state = 0;
		drawButton(13);
		break;

	case 14: // Set RTC to Edit
		set_RTC_to_TimeEdit();
		HAL_Delay(10);
		sButtonData[14].state = 1;
		drawButton(14);
		HAL_Delay(10);
		sButtonData[14].state = 0;
		drawButton(14);
		break;

	case 27: // Set RTC to Edit
		set_RTC_to_DateEdit();
		HAL_Delay(10);
		sButtonData[27].state = 1;
		drawButton(27);
		HAL_Delay(10);
		sButtonData[27].state = 0;
		drawButton(27);
		break;
	}
}

void executeCalibrationButton(uint16_t index)
{
	switch (index)
	{
	case 10: // Lower Band
		if (BandIndex > Band_Minimum)
		{
			BandIndex--;
			show_wide(340, 55, sBand_Data[BandIndex].Frequency);
			sprintf(display_frequency, "%s", sBand_Data[BandIndex].display);
		}
		break;

	case 11: // Raise Band
		if (BandIndex < _10M)
		{
			BandIndex++;
			show_wide(340, 55, sBand_Data[BandIndex].Frequency);
			sprintf(display_frequency, "%s", sBand_Data[BandIndex].display);
		}
		break;

	case 15: // Lower Hour
		processButton(3, 0, 0);
		break;

	case 16: // Raise Hour
		processButton(3, 1, 0);
		break;

	case 17: // Lower Minute
		processButton(4, 0, 0);
		break;

	case 18: // Raise Minute
		processButton(4, 1, 0);
		break;

	case 19: // Lower Second
		processButton(5, 0, 0);
		break;

	case 20: // Raise Second
		processButton(5, 1, 0);
		break;

	case 21: // Lower Day
		processButton(0, 0, 1);
		break;

	case 22: // Raise Day
		processButton(0, 1, 1);
		break;

	case 23: // Lower Month
		processButton(1, 0, 1);
		break;

	case 24: // Raise Month
		processButton(1, 1, 1);
		break;

	case 25: // Lower Year
		processButton(2, 0, 1);
		break;

	case 26: // Raise Year
		processButton(2, 1, 1);
		break;
	}
}

void setup_Cal_Display(void)
{
	BSP_LCD_SetTextColor(LCD_COLOR_BLACK);
	BSP_LCD_FillRect(0, FFT_H, 480, 201);

	sButtonData[10].Active = 3;
	sButtonData[11].Active = 3;

	sButtonData[12].Active = 1;
	sButtonData[13].Active = 1;
	sButtonData[14].Active = 1;

	for (int i = 15; i < 27; i++)
	{
		sButtonData[i].Active = 3;
		drawButton(i);
	}

	sButtonData[27].Active = 1;

	drawButton(10);
	drawButton(11);
	drawButton(12);
	drawButton(13);
	drawButton(14);
	drawButton(27);

	show_wide(340, 55, start_freq);

	load_RealTime();
	display_RTC_TimeEdit(RTC_Button - 20, RTC_line0 + 15);

	load_RealDate();
	display_RTC_DateEdit(RTC_Button - 20, RTC_line3 + 15);
}

void erase_Cal_Display(void)
{
	BSP_LCD_SetTextColor(LCD_COLOR_BLACK);
	BSP_LCD_FillRect(0, FFT_H, 480, 201);

	for (int i = 10; i < numButtons; i++)
	{
		sButtonData[i].Active = 0;
	}

	sButtonData[12].state = 0;
	sButtonData[13].state = 0;
	sButtonData[14].state = 0;
	sButtonData[27].state = 0;
}

void Init_BoardVersionInput(void)
{
	GPIO_InitTypeDef gpio_init_structure;

	__HAL_RCC_GPIOH_CLK_ENABLE();

	gpio_init_structure.Pin = GPIO_PIN_6; // D6  BTS
	gpio_init_structure.Mode = GPIO_MODE_INPUT;
	gpio_init_structure.Pull = GPIO_PULLUP;
	gpio_init_structure.Speed = GPIO_SPEED_HIGH;

	HAL_GPIO_Init(GPIOH, &gpio_init_structure);

	HAL_GPIO_WritePin(GPIOH, GPIO_PIN_6, GPIO_PIN_RESET); // Set = Receive connect
}

void RLY_Select_20to40(void)
{
	HAL_GPIO_WritePin(GPIOI, GPIO_PIN_3, GPIO_PIN_SET);
}

void RLY_Select_10to17(void)
{
	HAL_GPIO_WritePin(GPIOI, GPIO_PIN_3, GPIO_PIN_RESET);
}

static void Init_BandSwitchOutput(void)
{
	GPIO_InitTypeDef gpio_init_structure;

	gpio_init_structure.Pin = GPIO_PIN_3; // D7  RLY
	gpio_init_structure.Mode = GPIO_MODE_OUTPUT_OD;
	gpio_init_structure.Pull = GPIO_PULLUP;
	gpio_init_structure.Speed = GPIO_SPEED_HIGH;

	HAL_GPIO_Init(GPIOI, &gpio_init_structure);

	HAL_GPIO_WritePin(GPIOI, GPIO_PIN_3, GPIO_PIN_RESET);
}

void Check_Board_Version(void)
{
	Band_Minimum = _20M;

	// GPIO Pin 6 is grounded for new model
	if (HAL_GPIO_ReadPin(GPIOH, GPIO_PIN_6) == 0)
	{
		Init_BandSwitchOutput();

		Band_Minimum = _40M;
	}

	Options_SetMinimum(Band_Minimum);
}

void receive_sequence(void)
{
	PTT_Out_Set(); // set output high to connect receiver to antenna
	HAL_Delay(10);
	sButtonData[3].state = 0;
	drawButton(3);
}
